--- a/style.css
+++ b/style.css
@@ -173,13 +173,16 @@ td button {
 .week {
   border-collapse: collapse;
 }
-.td-border {
+.td-week {
   width: 20px;
   height: 45px;
   border: 1px solid rgb(200, 200, 200);
 }
 .td-right-border {
   border-right: 1px solid rgb(230, 230, 230);
+}
+.lime-field {
+  background-color: rgb(176, 221, 53);
 }
 #week h3 {
   font-size: 20px;
@@ -242,76 +245,4 @@ footer a {
 .copyright {
   margin-top: 50px;
   text-align: center;
-}
-
-@media screen and (max-width: 600px) {
-  #container {
-    max-width: 100%;
-  }
-  .grey {
-    height: 115px;
-  }
-  #content {
-    width: 93%;
-    top: 120px;
-    left: 20px;
-  }
-  .photo {
-    height: 95px;
-    width: 95px;
-  }
-  #info {
-    margin-left: 10px;
-    width: 220px;
-    font-size: 9px;
-  }
-  #info h1 {
-    font-size: 20px;
-    margin-top: 10px;
-  }
-  #info h3 {
-    font-size: 10px;
-  }
-  #contact {
-    margin-top: 20px;
-    font-size: 10px;
-    padding: 6px 10px;
-  }
-  th,
-  td {
-    padding: 7px;
-    font-size: 9px;
-  }
-  .left h2 {
-    font-size: 15px;
-  }
-  .left span {
-    font-size: 10px;
-  }
-  .right {
-    font-size: 13px;
-    font-weight: 400;
-  }
-  .right p {
-    font-size: 9px;
-  }
-  input {
-    width: 100px;
-    height: 20px;
-    border-width: 1px;
-  }
-  td h2 {
-    font-size: 13px;
-  }
-  td button {
-    font-size: 9px;
-    padding: 4px 8px;
-    border-width: 1px;
-  }
-  .student {
-    width: 130px;
-  }
-  .student h2 {
-    font-size: 11px;
-  }
 }
